# one_more_time

./: .gitignore  .gitmodules  Cargo.toml  build.rs  default_settings.toml
assets/cfg/entities/characters/: test.toml
assets/cfg/game/characters/: test.toml
assets/cfg/game/test/: random.json
assets/cfg/shaders/: test.toml
assets/cfg/shaders/test/: random.toml
assets/cfg/textures/: test.toml
assets/scripts/core/: entity.lua  main_menu_bar.lua
assets/scripts/lib/: class.lua
assets/scripts/test/: entity.lua  test_bar.lua  test_require.lua
assets/scripts/ui/: main_menu_bar.lua
assets/shaders/: basic.fs  basic.vs  simple.vs  vertex_layout.glsl
assets/shaders/src/: basic.fs  player.vs
assets/ui/: test_bar.xml  test_window.xml
assets/ui/core/: main_menu_bar.xml
assets/ui/test/: test_bar.xml  test_window.xml
config/: settings.toml
dumpster/: Cargo.toml  lua.rs  scripting.rs  sdl2_window.rs  shaders.rs
dumpster/scripts/lib/: class.lua
omt/: Cargo.toml
omt/src/: core.rs  gfx.rs  lib.rs  ui.rs  util.rs
omt/src/util/: logging.rs  settings.rs
plugins/main/: .gitignore  Cargo.toml  install.rb
plugins/main/0.1.0/shaders/: basic.fs  basic.vs
plugins/main/assets/shaders/: simple.fs
plugins/main/assets/ui/core/: main_menu_bar.xml
plugins/main/assets/ui/test/: test_window.xml
plugins/main/src/: directory_iter.rs  game.rs  lib.rs  ui.rs
plugins/main/v0.1.0/shaders/: basic.fs  basic.vs
src/: game.rs  gfx.rs  input.rs  main.rs  math.rs  scripting.rs  ui.rs  util.rs
src/game/: cam.rs  world.rs
src/gfx/: image.rs  model.rs  shaders.rs  sprite.rs  tex.rs
src/gfx/image/: sdl2_image.rs
src/input/: keyboard.rs  mouse.rs
src/math/: geom.rs
src/math/geom/: aabb.rs
src/ui/: main_menu_bar.rs  menu.rs  menu_item.rs  text_box.rs  ui_manager.rs  window.rs
src/util/: convert.rs  dir.rs  dylib.rs  external.rs  fps.rs  io.rs  logging.rs  math.rs  ptr.rs  script.rs  settings.rs  xml.rs
src/util/io/: directory.rs  directory_iter.rs
src/util/settings/: display.rs  game.rs  graphics.rs  scripts.rs
src/view/: window.rs
src/view/window/: glfw_window.rs  sdl2_window.rs
tools/: shader.rb
