[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

glfw = "0.43.0"
imgui-glium-renderer = "0.8.2"
image = "0.23.14"

# steamworks = "0.8.0"

nalgebra-glm = "0.16.0"
geo = "0.18.0"

toml = "0.5.8"
xml-rs = "0.8.4"

enum-map = "1.1.1"
strum = "0.22.0"
strum_macros = "0.22"

scheduled-thread-pool = "0.2.5"

chrono = "0.4.19"
fern = "0.6.0"
log = "0.4.14"

chlorine = "1.0.9"

lazy_static = "1.4.0"
dyn-clone = "1.0.4"

regex = "1.5.4"
walkdir = "2.3.2"
maplit = "1.0.2"

mlua = { version = "0.7.3", features = ["lua54", "vendored"] }

double = "0.2.4"

profiling = "1.0.5"
puffin = "0.13.1"
puffin-imgui = "0.16.0"
